--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <h1>Rick and Morty - Personaje</h1>
   <button onclick="obtenerPersonaje()">Mostrar personaje</button>
-  <div id="personaje"></div>
+  <ul id="personaje"></ul>
 
 
   <script src="cript.js"></script>
